--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
       ref: "develop"
   shared_preferences: any
   responsive_framework: any
+  json: ^0.20.2
 dependency_overrides: 
   intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
