--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   http: ^1.2.1
   path_provider: ^2.1.3
+  codemirror: ^0.7.12+5.65.16
 dependency_overrides: 
   intl: ^0.19.0
 dev_dependencies:
