--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   path_provider: ^2.1.3
   codemirror: ^0.7.12+5.65.16
+  file_picker: ^5.5.0
 dependency_overrides: 
   intl: ^0.19.0
 dev_dependencies:
